fix: long name doesn't wrap on portrait

--- a/my-app/src/app/pages/introduction-page/introduction-page.component.css
+++ b/my-app/src/app/pages/introduction-page/introduction-page.component.css
@@ -387,4 +387,8 @@ app-search-bar {
     .week-prediction {
         width: 100%;
     }
+
+    .location-name {
+        white-space: nowrap;
+    }
 }
